--- a/style.css
+++ b/style.css
@@ -12,10 +12,11 @@ body{
 }
 .gamecontainer{
     background-image: url(maxresdefault.jpg);
+    background-position: center;
     background-repeat: no-repeat;
-    background-size: 100vw 100vh;
+    background-size: cover;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 .gameover{
     visibility: hidden;
