--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-*{
+{
     margin: 0;
     padding: 0;
 }
 body{
+    
     overflow: hidden;
 }
 #scorecontainer{
@@ -12,11 +13,10 @@ body{
 }
 .gamecontainer{
     background-image: url(maxresdefault.jpg);
-    background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100vw 100vh;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 .gameover{
     visibility: hidden;
@@ -43,9 +43,9 @@ body{
     height: 50px;
 }
 .jump{
-    position:absolute;
+    position: absolute;
     bottom: 0px;
-    left: 100px;
+    left:1000px;
     width: 70px;
     height: 50px;
 }
